--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 .container {
   
-  width: 90%;
+  /* width: 90%; */
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-  
+  font-style: normal;
+  font-family: monospace;
 }
 .small_cont{
   display: flex;
@@ -29,8 +30,14 @@ body {
 
 .search {
   border-radius: 13px;
-  max-width: 300px;
+  
+  width: 20rem;
   text-align: center;
+  transform: translate(-50%,-50%);
+  left:50%;
+  position: fixed;
+
+  
 
 }
 .btn-search{
@@ -45,13 +52,27 @@ body {
   height: '100%'; 
   background: '#D9D9D9';
   border-radius: 27;
-}
+}           
 
-.nav{
+nav{
+  /* position:fixed; */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  
 }
 
+nav * {
+padding :10px;
+}
+.result{
+  margin-left: 10%;
+  margin-right: 10%;
+  /* width: 80%; */
+  /* margin: 40px; */
+  
+  
+
+}
 /* * {
     font-family: Arial, Helvetica, sans-serif;npm
     box-sizing: border-box;
